reference-llvm/tests/should-fail/fail2.mu
// entry w/ args

function @entry foo(n) {
    ;
}
